# python-package-template

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
app/: pyproject.toml
code/: README.md  pyproject.toml
